2
      ____              __
     / __/__  ___ _____/ /__
    _\ \/ _ \/ _ `/ __/  '_/
   /__ / .__/\_,_/_/ /_/\_\   version 3.2.1
      /_/

Using Python version 3.8.10 (default, Jun 22 2022 20:18:18)
Spark context Web UI available at http://3ad0d14ca11e:4040
Spark context available as 'sc' (master = local[*], app id = local-1695882886623).
SparkSession available as 'spark'.
>>> data=[(1,'gaurav'),(2,'anuj'),(3,'maheer')]
>>> schema=['id','nmae']
>>> df=spark.createDataFrame(data=data,schema=schema)
df.s>>> df.show()
+---+------+                                                                    
| id|  nmae|
+---+------+
|  1|gaurav|
|  2|  anuj|
|  3|maheer|
+---+------+

>>> df.show()
+---+------+
| id|  nmae|
+---+------+
|  1|gaurav|
|  2|  anuj|
|  3|maheer|
+---+------+

>>> df.show(n=2,vertical=True)
-RECORD 0------
 id   | 1      
 nmae | gaurav 
-RECORD 1------
 id   | 2      
 nmae | anuj   
only showing top 2 rows

>>> help(df.show())
+---+------+
| id|  nmae|
+---+------+
|  1|gaurav|
|  2|  anuj|
|  3|maheer|
+---+------+

w
>>> df.show()
+---+------+
| id|  nmae|
+---+------+
|  1|gaurav|
|  2|  anuj|
|  3|maheer|
+---+------+

>>> data=[(1,'gaurav',2000),(2,'anuj',45856),(3,'ram',52245)]
>>> schema=['id','name','salary']
>>> df1=spark.createDataFrame(data=data,schema=schema)
>>> df1.show()
+---+------+------+
| id|  name|salary|
+---+------+------+
|  1|gaurav|  2000|
|  2|  anuj| 45856|
|  3|   ram| 52245|
+---+------+------+

>>> df1.printSchema()
root
 |-- id: long (nullable = true)
 |-- name: string (nullable = true)
 |-- salary: long (nullable = true)

>>> df2=df1.withColumn(colName='salary',col=col('salary').cast('Integer'))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'col' is not defined
>>> from pyspark session import col
  File "<stdin>", line 1
    from pyspark session import col
                 ^
SyntaxError: invalid syntax
>>> from pyspark.sql.function import col
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'pyspark.sql.function'
>>> from pyspark.sql.functions import col
>>> df2=df1.withColumn(colName='salary',col=col('salary').cast('Integer'))
>>> df2.printSchema(0
... df2.printSchema()
  File "<stdin>", line 2
    df2.printSchema()
    ^
SyntaxError: invalid syntax
>>> df2.printSchema()
root
 |-- id: long (nullable = true)
 |-- name: string (nullable = true)
 |-- salary: integer (nullable = true)

>>> df3=df2.withColumn('salary',col('salary')*2)
>>> df3.show()
+---+------+------+
| id|  name|salary|
+---+------+------+
|  1|gaurav|  4000|
|  2|  anuj| 91712|
|  3|   ram|104490|
+---+------+------+

>>> df3.WithColumn('country',lit('India'))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/usr/local/spark/python/pyspark/sql/dataframe.py", line 1659, in __getattr__
    raise AttributeError(
AttributeError: 'DataFrame' object has no attribute 'WithColumn'
>>> from pyspark.sql.functions import col lit
  File "<stdin>", line 1
    from pyspark.sql.functions import col lit
                                          ^
SyntaxError: invalid syntax
>>> from pyspark.sql.functions import col,lit
>>> df3.WithColumn('country',lit('India'))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/usr/local/spark/python/pyspark/sql/dataframe.py", line 1659, in __getattr__
    raise AttributeError(
AttributeError: 'DataFrame' object has no attribute 'WithColumn'
>>> df4=df3.WithColumn('country',lit('India'))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/usr/local/spark/python/pyspark/sql/dataframe.py", line 1659, in __getattr__
    raise AttributeError(
AttributeError: 'DataFrame' object has no attribute 'WithColumn'
>>> from pyspark.sql.functions import col,lit
>>> df4=df3.WithColumn('country',lit('India'))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/usr/local/spark/python/pyspark/sql/dataframe.py", line 1659, in __getattr__
    raise AttributeError(
AttributeError: 'DataFrame' object has no attribute 'WithColumn'
>>> df3.show()
+---+------+------+
| id|  name|salary|
+---+------+------+
|  1|gaurav|  4000|
|  2|  anuj| 91712|
|  3|   ram|104490|
+---+------+------+

>>> df4=df3.withColumn('country',lit('India'))
>>> df4.show()
+---+------+------+-------+
| id|  name|salary|country|
+---+------+------+-------+
|  1|gaurav|  4000|  India|
|  2|  anuj| 91712|  India|
|  3|   ram|104490|  India|
+---+------+------+-------+

>>> df5=df4.withColumn('copysal',col('salary'))
>>> df5.show()
+---+------+------+-------+-------+
| id|  name|salary|country|copysal|
+---+------+------+-------+-------+
|  1|gaurav|  4000|  India|   4000|
|  2|  anuj| 91712|  India|  91712|
|  3|   ram|104490|  India| 104490|
+---+------+------+-------+-------+

>>> 
